regression/fail/modules.42.sml
structure S = struct end
and S = struct end

functor F () = struct end
and F () = struct end

signature S = sig end
and S = sig end
